--- a/resources/views/private/index.edge
+++ b/resources/views/private/index.edge
@@ -14,9 +14,13 @@
 
 </head>
 
-<body class="bg-[conic-gradient(at_right,_var(--tw-gradient-stops))] from-indigo-200 via-slate-600 to-indigo-200 min-h-screen flex items-center justify-center">
+<body class="bg-gray-100 flex flex-col min-h-screen">
+
+@include('private/layout/header')
 
 @!section('content')
+
+@include('private/layout/footer')
 
 @entryPointScripts('app')
 
