--- a/resources/views/private/layout/header.edge
+++ b/resources/views/private/layout/header.edge
@@ -12,9 +12,21 @@
 
           <a href="#" class="text-white flex items-center space-x-2">
 
-            <i icon-name="home"></i>
+            <i icon-name="user"></i>
 
-            <span>Página Inicial</span>
+            <span>Usuários</span>
+
+          </a>
+
+        </li>
+
+        <li>
+
+          <a href="#" class="text-white flex items-center space-x-2">
+
+            <i icon-name="newspaper"></i>
+
+            <span>Notícias</span>
 
           </a>
 
