add: System Main Files Structure

--- a/resources/views/private/layout/header.edge
+++ b/resources/views/private/layout/header.edge
@@ -32,6 +32,30 @@
 
         </li>
 
+        <li>
+
+          <a href="#" class="text-white flex items-center space-x-2">
+
+            <i icon-name="fingerprint"></i>
+
+            <span>Logado como: Gabriel Souza</span>
+
+          </a>
+
+        </li>
+
+        <li>
+
+          <a href="#" class="text-white flex items-center space-x-2">
+
+            <i icon-name="log-out"></i>
+
+            <span>Sair</span>
+
+          </a>
+
+        </li>
+
       </ul>
 
     </div>
