--- a/resources/views/private/layout/footer.edge
+++ b/resources/views/private/layout/footer.edge
@@ -10,7 +10,7 @@
 
       <a href="#" class="text-white">Termos de Uso</a>
 
-      <a href="/login" class="text-white">Voltar ao Blog</a>
+      <a href="/" class="text-white">Voltar ao Blog</a>
 
     </div>
 
