--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -10,7 +10,7 @@
 
   <p class="text-xl mb-6 text-center">Entre para começar!</p>
 
-  <form>
+  <form action="/login" method="post">
 
     <div class="mb-4">
 
