--- a/resources/views/private/articles/index.edge
+++ b/resources/views/private/articles/index.edge
@@ -4,4 +4,12 @@
 
 @section('content')
 
+<br><br><br>
+<br><br><br>
+<br><br><br>
+
+@if(auth.isLoggedIn)
+<p> Hello {{ auth.user.name }} </p>
+@endif
+
 @end
